refactor: replace trim and empty with isBlank check in ValidationUtils